--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,15 +13,23 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "eslint-plugin-jest", "prettier"],
   "rules": {
     "prettier/prettier": ["error"],
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
-    "comma-dangle": ["error", "always"],
     "no-cond-assign": ["error", "always"],
     "no-console": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["tests/**/*"],
+      "plugins": ["jest"],
+      "env": {
+        "jest/globals": true
+      }
+    }
+  ]
 }
