--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "grubmernbackend",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
     "commit": "cz",
     "cz": "cz",
+    "dev": "nodemon",
     "lint": "eslint . --config .eslintrc.json",
     "lint:fix": "eslint . --fix --config .eslintrc.json",
     "test": "jest --config ./jest.config.js",
@@ -16,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/multer": "^1.4.11",
+    "@types/supertest": "^6.0.2",
     "cloudinary": "^1.41.3",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
@@ -27,7 +29,8 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
-    "stripe": "^14.15.0"
+    "stripe": "^14.15.0",
+    "supertest": "^6.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
